IOT-485 fix edit used and password error

--- a/src/app/admin/users/user-edit/user-edit.component.html
+++ b/src/app/admin/users/user-edit/user-edit.component.html
@@ -5,6 +5,9 @@
             <li *ngFor="let error of errorMessages">
                 {{error}}
             </li>
+            <li *ngIf="errorMessage">
+                {{errorMessage | translate}}
+            </li>
         </ul>
     </div>
 
