--- a/src/app/navbar/global-admin/global-admin.component.html
+++ b/src/app/navbar/global-admin/global-admin.component.html
@@ -1,7 +1,7 @@
 <mat-expansion-panel class="mb-5">
     <mat-expansion-panel-header>
         <mat-panel-title class="nav-item py-2">
-            Global Administrator
+            <p class="nav-item ml-2">Global Administrator</p>
         </mat-panel-title>
         <mat-panel-description></mat-panel-description>
     </mat-expansion-panel-header>
@@ -11,17 +11,21 @@
             <a routerLink="/admin/users" routerLinkActive="active" class="nav-link pl-5 position-relative rounded">
                 {{'NAV.USERS' | translate}}
             </a>
+            <fa-icon [icon]="faUsers" class="navbar-icon"></fa-icon>
         </li>
         <li class="nav-item py-2">
-            <a routerLink="/admin/permissions" routerLinkActive="active" class="nav-link pl-5 position-relative rounded">
+            <a routerLink="/admin/permissions" routerLinkActive="active"
+                class="nav-link pl-5 position-relative rounded">
                 {{'NAV.PERMISSIONS' | translate}}
             </a>
+            <fa-icon [icon]="faIdBadge" class="navbar-icon"></fa-icon>
         </li>
         <li class="nav-item py-2">
             <a routerLink="/admin/organisations" routerLinkActive="active"
                 class="nav-link pl-5 position-relative rounded">
                 {{'NAV.ORGANISATIONS' | translate}}
             </a>
+            <fa-icon [icon]="faSitemap" class="navbar-icon"></fa-icon>
         </li>
     </ul>
 
