--- a/src/styles.scss
+++ b/src/styles.scss
@@ -6,6 +6,7 @@
 @import 'assets/scss/components/boxes';
 @import 'assets/scss/components/forms';
 @import 'assets/scss/components/loading-spinner';
+@import 'assets/scss/components/navbar';
 @import 'assets/scss/components/tables';
 
 //Elements
@@ -19,6 +20,7 @@
 @import 'assets/scss/setup/typography';
 @import 'assets/scss/setup/utilities';
 @import 'assets/scss/setup/variables';
+@import 'assets/scss/setup/material-theme';
 
 
 
