IOT-262 add integration to backend

--- a/src/app/shared/form/form-body-datatarget/form-body-datatarget.component.html
+++ b/src/app/shared/form/form-body-datatarget/form-body-datatarget.component.html
@@ -60,7 +60,7 @@
                         multiple
                         name="devices"
                         [compareWith]="compare"
-                        [(value)]="element.devices">
+                        [(value)]="element.iotDeviceIds">
                         <mat-option disabled="disabled" 
                         class="filter-option">
                           <button
