IOT-473: Validation of permission edit/new

--- a/src/app/admin/permission/permission-edit/permission-edit.component.html
+++ b/src/app/admin/permission/permission-edit/permission-edit.component.html
@@ -57,7 +57,7 @@
                 [disabled]="isEditMode"
                 [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('organizationId'), 'is-valid' : formFailedSubmit && !errorFields.includes('organizationId')}"
                 (ngModelChange)="organizationChanged($event)">
-                <option *ngFor="let org of organisations" [value]="org.id"
+                <option *ngFor="let org of organisations" [ngValue]="org.id"
                     [selected]="org.id === permission.organizationId">
                     {{org.name}}</option>
             </select>
