IOT-473: Remove unused param

--- a/src/app/admin/permission/permission-edit/permission-edit.component.html
+++ b/src/app/admin/permission/permission-edit/permission-edit.component.html
@@ -56,7 +56,7 @@
                 [(ngModel)]="permission.organizationId" required [value]="permission.organizationId"
                 [disabled]="isEditMode"
                 [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('organizationId'), 'is-valid' : formFailedSubmit && !errorFields.includes('organizationId')}"
-                (ngModelChange)="organizationChanged($event)">
+                (ngModelChange)="organizationChanged()">
                 <option *ngFor="let org of organisations" [ngValue]="org.id"
                     [selected]="org.id === permission.organizationId">
                     {{org.name}}</option>
