--- a/src/app/admin/permission/permission-edit/permission-edit.component.html
+++ b/src/app/admin/permission/permission-edit/permission-edit.component.html
@@ -39,15 +39,6 @@
             </select>
         </div>
     </div>
-    <!-- <div class="form-group mt-3 col-12">
-        <mat-form-field appearance="outline">
-            <mat-label class="form-label" for="name">{{'PERMISSION.EDIT.USERS' | translate}}</mat-label>
-            <mat-select id="userIds" name="userIds" class="custom-select" multiple [(ngModel)]="permission.userIds"
-                [placeholder]="'PERMISSION.EDIT.USERS-PLACEHOLDER' | translate" multiple>
-                <mat-option *ngFor="let user of users" [value]="user.id">{{user.name}}</mat-option>
-            </mat-select>
-        </mat-form-field>
-    </div> -->
 
     <div *ngIf="permission.level != 'GlobalAdmin'">
         <div class="form-group mt-3 col-12">
@@ -56,7 +47,7 @@
                 [(ngModel)]="permission.organizationId" required [value]="permission.organizationId"
                 [disabled]="isEditMode"
                 [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('organizationId'), 'is-valid' : formFailedSubmit && !errorFields.includes('organizationId')}"
-                (ngModelChange)="organizationChanged($event)">
+                (ngModelChange)="organizationChanged()">
                 <option *ngFor="let org of organisations" [ngValue]="org.id"
                     [selected]="org.id === permission.organizationId">
                     {{org.name}}</option>
