IOT-500 fix and add username + icon

--- a/src/app/navbar/global-admin/global-admin.component.html
+++ b/src/app/navbar/global-admin/global-admin.component.html
@@ -1,4 +1,7 @@
-<mat-expansion-panel class="mb-5">
+<div *ngIf="user">
+    <fa-icon [icon]="faUser" class="navbar-icon" style="margin-right: 1em; margin-left: 1em;"></fa-icon> {{user.name}}
+</div>
+<mat-expansion-panel class="mb-5" *ngIf="isGlobalAdmin">
     <mat-expansion-panel-header>
         <mat-panel-title class="nav-item py-2">
             <p class="nav-item ml-2">Global Administrator</p>
