--- a/src/app/views/datatarget/datatarget/datatarget.component.html
+++ b/src/app/views/datatarget/datatarget/datatarget.component.html
@@ -43,7 +43,7 @@
             <p>{{'DATATARGET.NO-RELATIONS' | translate}}</p>
           </div>
           <div class="col-12 pt-2 col-sm-8" *ngFor="let relation of dataTargetRelations">
-            <p>{{'DATATARGET.DATATARGET' | translate}}</p>
+            <p>{{'DATATARGET.PAYLOADEDECODER' | translate}}</p>
               <ul>
                 <li>
                   {{relation.dataTarget.name}}
