IOT-27 add datapackage to iot-device-detail

--- a/src/app/my-applications/iot-devices/iot-device-detail/iot-device-detail.component.html
+++ b/src/app/my-applications/iot-devices/iot-device-detail/iot-device-detail.component.html
@@ -146,6 +146,33 @@
                 </div>
             </div>
         </ng-container>
+        <div class="col-12 py-4">
+            <mat-expansion-panel>
+                <mat-expansion-panel-header>
+                    <mat-panel-title>
+                        <ng-container *ngIf="device.latestReceivedMessage?.sentTime; then sentTime; else noSentTime">    
+                        </ng-container>
+                        <ng-template #sentTime>
+                            <p>
+                                {{'IOTDEVICE.LATEST-DATAPACKAGE' | translate}} {{device.latestReceivedMessage?.sentTime | date:'medium'}}
+                            </p>
+                        </ng-template>
+                        <ng-template #noSentTime>
+                            <p>
+                                {{'IOTDEVICE.NO-DATAPACKAGE' | translate}}
+                            </p>
+                        </ng-template>
+                    </mat-panel-title>
+                </mat-expansion-panel-header>
+                    <ng-container *ngIf="device.latestReceivedMessage?.rawData">    
+                        <code>
+                            <pre>
+                                {{device.latestReceivedMessage.rawData | json }}
+                            </pre>
+                        </code>
+                    </ng-container>
+            </mat-expansion-panel>
+        </div>
     </div>
     <ng-container *ngIf="device.type">
         <div class="col-12 py-4">
