--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -39,7 +39,7 @@
             <p class="ml-2">Generelt</p>
             <mat-divider></mat-divider>
             <li class="nav-item py-2">
-              <a routerLink="/lora-gateways" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
+              <a routerLink="/gateways" routerLinkActive="active" class="nav-link pl-5 position-relative rounded"
                 id="myLoraGateway">
                 {{ 'NAV.LORA-GATEWAYS' | translate }}
               </a>
