--- a/src/app/gateway/gateway-table/gateway-table.component.html
+++ b/src/app/gateway/gateway-table/gateway-table.component.html
@@ -5,6 +5,8 @@
                 <th>{{ 'LORA-GATEWAY-TABLE.NAME' | translate }}</th>
                 <th>{{ 'LORA-GATEWAY-TABLE.GATEWAYID' | translate }}</th>
                 <th>{{ 'LORA-GATEWAY-TABLE.LOCATION' | translate }}</th>
+                <th>{{ 'LORA-GATEWAY-TABLE.LAST-SEEN-AT' | translate }}</th>
+                <th>{{ 'LORA-GATEWAY-TABLE.STATUS' | translate }}</th>
                 <th></th>
             </tr>
         </thead>
