--- a/src/app/gateway/gateway-detail/gateway-detail.component.html
+++ b/src/app/gateway/gateway-detail/gateway-detail.component.html
@@ -1,8 +1,8 @@
 <app-top-bar-single [data]="gateway" [backButton]="backButton"></app-top-bar-single>
     <div class="application-component">
-        <div class="col-12 mb-4 py-3 bottom-separator">
-            <div class="col-12 col-sm-12">
-                <div class="col-12 col-sm-12">
+        <div class="bottom-separator">
+            <div class="col-12 py-4">
+                <div class="col-12 col-sm-4">
                     <h4>{{ 'GATEWAY.NAME' | translate }}</h4>
                 </div>
                 <div class="col-12 pt-2 col-sm-8">
@@ -56,5 +56,30 @@
                 <p>{{gateway.tagsString}}</p>
             </div>
         </div>
+            <div class="col-12 col-sm-4">
+                <h4>{{ 'GATEWAY.STATS' | translate }}</h4>
+            </div>
+            <div class="mat-elevation-z8 col-12 pt-2 col-sm-8">
+                <table mat-table [dataSource]="dataSource">
+                    <ng-container matColumnDef="rxPacketsReceived">
+                        <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-RXPACKETSRECEIVED' | translate }}</th>
+                        <td mat-cell *matCellDef="let element">{{element.rxPacketsReceived}}</td>
+                    </ng-container>
+                    
+                    <ng-container matColumnDef="txPacketsEmitted">
+                        <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-TXPACKETSEMITTED' | translate }}</th>
+                        <td mat-cell *matCellDef="let element">{{element.txPacketsEmitted}}</td>
+                    </ng-container>
+            
+                    <ng-container matColumnDef="txPacketsReceived">
+                        <th mat-header-cell *matHeaderCellDef>{{ 'GATEWAY.STATS-TIMESTAMP' | translate }}</th>
+                        <td mat-cell *matCellDef="let element">{{element.timestamp | date}}</td>
+                    </ng-container>
+            
+                    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+                </table>
+                <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+            </div>
         </div>
     </div>
