--- a/src/app/admin/users/user-list/user-table/user-table.component.html
+++ b/src/app/admin/users/user-list/user-table/user-table.component.html
@@ -6,7 +6,7 @@
                 <th scope="col">{{ 'USERS.EMAIL' | translate }}</th>
                 <th scope="col">{{ 'USERS.GLOBALADMIN' | translate }}</th>
                 <th scope="col">{{ 'USERS.STATUS' | translate }}</th>
-                <th scope="col">{{ 'USERS.EMAIL' | translate }}</th>
+                <th scope="col">{{ 'USERS.LOGIN' | translate }}</th>
                 <th scope="col"></th>
             </tr>
         </thead>
