--- a/src/app/applications/datatarget/datatarget-list/datatarget-list.component.html
+++ b/src/app/applications/datatarget/datatarget-list/datatarget-list.component.html
@@ -1,12 +1,9 @@
-<div class="px-sm-5 py-sm-4">
-  <div class="row mb-5">
-    <app-top-bar [sort]="sort" [(selectedSortId)]="selectedSortId" [pageLimit]="pageLimit" [title]="title"
-      [ctaLabel]="'FORM.CREATE-NEW-DATATARGET' | translate" [ctaRouterLink]="'datatarget-edit'"
-      (updatePageLimit)="updatePageLimit($event)" [backButtonTitle]="'Tilbage'"
-      (selectedSortChange)="changeSort($event)"></app-top-bar>
-  </div>
-  <div class="row">
-    <app-datatarget-table [selectedSortObject]="selectedSortObject" [pageLimit]="pageLimit">
-    </app-datatarget-table>
-  </div>
+<app-top-bar [sort]="sort" [(selectedSortId)]="selectedSortId" [pageLimit]="pageLimit" [title]="title"
+  [ctaLabel]="'FORM.CREATE-NEW-DATATARGET' | translate" [ctaRouterLink]="'datatarget-edit'"
+  (updatePageLimit)="updatePageLimit($event)" [backButtonTitle]="'Tilbage'" (selectedSortChange)="changeSort($event)">
+</app-top-bar>
+
+<div class="m-md-4 p-md-3">
+  <app-datatarget-table [selectedSortObject]="selectedSortObject" [pageLimit]="pageLimit">
+  </app-datatarget-table>
 </div>
