--- a/src/app/applications/iot-devices/iot-devices-list/iot-devices-list.component.html
+++ b/src/app/applications/iot-devices/iot-devices-list/iot-devices-list.component.html
@@ -1,10 +1,7 @@
-<div class="px-sm-5 py-sm-4">
-  <div class="row mb-5">
-    <app-top-bar [sort]="sort" [(selectedSortId)]="selectedSortId" [pageLimit]="pageLimit"
-      [title]="'NAV.ALL-IOT-DEVICES' | translate" (updatePageLimit)="updatePageLimit($event)"
-      (selectedSortChange)="changeSort($event)"></app-top-bar>
-  </div>
-  <div class="row">
-    <app-iot-devices-table [selectedSortObject]="selectedSortObject" [pageLimit]="pageLimit"></app-iot-devices-table>
-  </div>
+<app-top-bar [sort]="sort" [(selectedSortId)]="selectedSortId" [pageLimit]="pageLimit"
+  [title]="'NAV.ALL-IOT-DEVICES' | translate" (updatePageLimit)="updatePageLimit($event)"
+  (selectedSortChange)="changeSort($event)"></app-top-bar>
+
+<div class="m-md-4 p-md-3">
+  <app-iot-devices-table [selectedSortObject]="selectedSortObject" [pageLimit]="pageLimit"></app-iot-devices-table>
 </div>
