--- a/src/app/admin/permission/permission-list/permission-list.component.html
+++ b/src/app/admin/permission/permission-list/permission-list.component.html
@@ -1,10 +1,7 @@
-<div class="px-sm-5 py-sm-4">
-    <div class="row mb-5">
-        <app-top-bar [sort]="sort" [pageLimit]="pageLimit" [title]="'NAV.PERMISSIONS' | translate"
-            [ctaLabel]="'FORM.CREATE-NEW-PERMISSION' | translate" [ctaRouterLink]="'new-permission'"></app-top-bar>
-    </div>
-    <div class="row">
-        <app-permission-tabel [permissions]="permissions" (deletePermission)="deletePermission($event)">
-        </app-permission-tabel>
-    </div>
+<app-top-bar [sort]="sort" [pageLimit]="pageLimit" [title]="'NAV.PERMISSIONS' | translate"
+    [ctaLabel]="'FORM.CREATE-NEW-PERMISSION' | translate" [ctaRouterLink]="'new-permission'"></app-top-bar>
+
+<div class="m-md-4 p-md-3">
+    <app-permission-tabel [permissions]="permissions" (deletePermission)="deletePermission($event)">
+    </app-permission-tabel>
 </div>
