--- a/src/app/admin/users/user-list/user-list.component.html
+++ b/src/app/admin/users/user-list/user-list.component.html
@@ -1,10 +1,7 @@
-<div class="px-sm-5 py-sm-4">
-    <div class="row mb-5">
-        <app-top-bar [sort]="sort" [pageLimit]="pageLimit" [title]="'NAV.USERS' | translate"
-            [ctaLabel]="'USERS.CREATE' | translate" [ctaRouterLink]="'new-user'"
-            (updatePageLimit)="updatePageLimit($event)" (selectedSortChange)="changeSort($event)"></app-top-bar>
-    </div>
-    <div class="row">
-        <app-user-table></app-user-table>
-    </div>
+<app-top-bar [sort]="sort" [pageLimit]="pageLimit" [title]="'NAV.USERS' | translate"
+    [ctaLabel]="'USERS.CREATE' | translate" [ctaRouterLink]="'new-user'" (updatePageLimit)="updatePageLimit($event)"
+    (selectedSortChange)="changeSort($event)"></app-top-bar>
+
+<div class="m-md-4 p-md-3">
+    <app-user-table></app-user-table>
 </div>
