--- a/src/app/applications/applications-list/applications-list.component.html
+++ b/src/app/applications/applications-list/applications-list.component.html
@@ -1,14 +1,11 @@
-<div class="px-sm-5 py-sm-4">
-  <div class="row mb-5">
-    <app-top-bar [sort]="sort" [(selectedSortId)]="selectedSortId" [pageLimit]="pageLimit"
-      [title]="'NAV.APPLICATIONS' | translate" [ctaLabel]="'FORM.CREATE-NEW-APPLICATION' | translate"
-      [ctaRouterLink]="'new-application'" (updatePageLimit)="updatePageLimit($event)"
-      (selectedSortChange)="changeSort($event)">
-    </app-top-bar>
-  </div>
-  <div class="row">
-    <app-applications-table [applications]="applications" [pageOffset]="pageOffset" [pageTotal]="pageTotal"
-      (prevPage)="prevPage()" (nextPage)="nextPage()" (deleteApplication)="deleteApplication($event)">
-    </app-applications-table>
-  </div>
+<app-top-bar [sort]="sort" [(selectedSortId)]="selectedSortId" [pageLimit]="pageLimit"
+  [title]="'NAV.APPLICATIONS' | translate" [ctaLabel]="'FORM.CREATE-NEW-APPLICATION' | translate"
+  [ctaRouterLink]="'new-application'" (updatePageLimit)="updatePageLimit($event)"
+  (selectedSortChange)="changeSort($event)">
+</app-top-bar>
+
+<div class="m-md-4 p-md-3">
+  <app-applications-table [applications]="applications" [pageOffset]="pageOffset" [pageTotal]="pageTotal"
+    (prevPage)="prevPage()" (nextPage)="nextPage()" (deleteApplication)="deleteApplication($event)">
+  </app-applications-table>
 </div>
