--- a/src/app/navbar/global-admin/global-admin.component.html
+++ b/src/app/navbar/global-admin/global-admin.component.html
@@ -4,7 +4,7 @@
 <mat-expansion-panel class="mb-5" *ngIf="isGlobalAdmin">
     <mat-expansion-panel-header>
         <mat-panel-title class="nav-item py-2">
-            <p class="nav-item ml-2">Global Administrator</p>
+            <p class="nav-item ml-2">{{'NAV.USERS' | translate}}</p>
         </mat-panel-title>
         <mat-panel-description></mat-panel-description>
     </mat-expansion-panel-header>
