--- a/src/app/shared/components/top-bar/top-bar-single/top-bar-single.component.html
+++ b/src/app/shared/components/top-bar/top-bar-single/top-bar-single.component.html
@@ -1,6 +1,6 @@
 <div class="row top-bar-wrapper">
-  <div class="col d-flex top-bar">
+  <div class="col-12 d-flex top-bar align-items-center">
     <a (click)="routeBack()" class="back-button py-3" [routerLink]="">{{backButton.label}}</a>
-    <h3 class="py-3">{{title}}</h3>
+    <h3 class="p-3">{{title}}</h3>
   </div>
 </div>
