--- a/src/assets/scss/components/_list.scss
+++ b/src/assets/scss/components/_list.scss
@@ -1,3 +1,5 @@
+@import '../setup/utilities';
+
 ul {
   padding-left: 0;
   list-style-type: none;
@@ -46,4 +48,9 @@ ol {
 .inline-list {
   @include unstyled-list;
   @include inline-list;
+}
+
+
+.list-group-item {
+  @include add-shadow;
 }
