--- a/src/assets/scss/elements/_links.scss
+++ b/src/assets/scss/elements/_links.scss
@@ -16,6 +16,7 @@ a {
   color: $color-link;
   border-bottom: 5px solid transparent;
   cursor: pointer;
+  text-decoration: none;
 
   &:hover,
   &.link-hover {
