--- a/src/assets/scss/setup/_utilities.scss
+++ b/src/assets/scss/setup/_utilities.scss
@@ -61,6 +61,18 @@
 }
 
 .Active,
-.Aktiv {
+.Aktiveret {
   color: $color-success;
+}
+
+
+@mixin add-shadow {
+  border-bottom: $grey-border solid 1px;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.11),
+    0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.22);
+  -webkit-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.11),
+    0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.22);
+  -moz-box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.11),
+    0px 1px 16px rgba(0, 0, 0, 0.03), 0px 0px 1px rgba(0, 0, 0, 0.22);
+  line-height: 36px;
 }
