--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,6 +8,7 @@
 @import 'assets/scss/components/loading-spinner';
 @import 'assets/scss/components/navbar';
 @import 'assets/scss/components/tables';
+@import 'assets/scss/components/topbar';
 
 //Elements
 @import 'assets/scss/elements/links';
