--- a/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
+++ b/src/app/applications/iot-devices/iot-device-edit/iot-device-edit.component.html
@@ -14,19 +14,10 @@
         [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('type'), 'is-valid' : formFailedSubmit && !errorFields.includes('type')}">
         <div class="form-check-inline radio-image">
           <label class="form-check-label d-flex flex-column-reverse">
-            <input attr.aria-label="Sigfox" type="radio" name="type" value="SIGFOX" class="form-check-input" required
-              [(ngModel)]="iotDevice.type" [attr.disabled]="editmode ? '' : null">
+            <input attr.aria-label="{{'GEN.HTTP' | translate}}" type="radio" name="type" value="GENERIC_HTTP"
+              class="form-check-input" required [(ngModel)]="iotDevice.type" [attr.disabled]="editmode ? '' : null">
             <div class="image-container">
-              <img src="assets/images/Sigfox_Logo.png" alt="Sigfox">
-            </div>
-          </label>
-        </div>
-        <div class="form-check-inline radio-image">
-          <label class="form-check-label d-flex flex-column-reverse">
-            <input attr.aria-label="NB-IoT" type="radio" name="type" value="NBIOT" class="form-check-input" required
-              [(ngModel)]="iotDevice.type" [attr.disabled]="editmode ? '' : null">
-            <div class="image-container">
-              <img src="assets/images/nbiot.png" alt="NB-IoT">
+              <img src="assets/images/iot.png" alt="{{'GEN.HTTP' | translate}}">
             </div>
           </label>
         </div>
@@ -41,10 +32,19 @@
         </div>
         <div class="form-check-inline radio-image">
           <label class="form-check-label d-flex flex-column-reverse">
-            <input attr.aria-label="{{'GEN.HTTP' | translate}}" type="radio" name="type" value="GENERIC_HTTP"
-              class="form-check-input" required [(ngModel)]="iotDevice.type" [attr.disabled]="editmode ? '' : null">
+            <input attr.aria-label="Sigfox" type="radio" name="type" value="SIGFOX" class="form-check-input" required
+              [(ngModel)]="iotDevice.type" [attr.disabled]="editmode ? '' : null">
             <div class="image-container">
-              <img src="assets/images/iot.png" alt="{{'GEN.HTTP' | translate}}">
+              <img src="assets/images/Sigfox_Logo.png" alt="Sigfox">
+            </div>
+          </label>
+        </div>
+        <div class="form-check-inline radio-image">
+          <label class="form-check-label d-flex flex-column-reverse">
+            <input attr.aria-label="NB-IoT" type="radio" name="type" value="NBIOT" class="form-check-input" required
+              [(ngModel)]="iotDevice.type" [attr.disabled]="editmode ? '' : null">
+            <div class="image-container">
+              <img src="assets/images/nbiot.png" alt="NB-IoT">
             </div>
           </label>
         </div>
@@ -186,6 +186,67 @@
           <mat-checkbox [(ngModel)]="iotDevice.lorawanSettings.skipFCntCheck" name="skipFCntCheck">
             {{'QUESTION.SKIPFCNTCHECK-YES' | translate}}
           </mat-checkbox>
+        </div>
+      </div>
+    </ng-container>
+
+    <ng-container *ngIf="iotDevice.type == sigfoxDevice">
+      <div class="row mb-5">
+        <h3>{{'IOTDEVICE.SIGFOXSETUP' | translate}}</h3>
+      </div>
+      <div class="form-group mt-3 col-12">
+        <mat-slide-toggle [(ngModel)]="iotDevice.sigfoxSettings.registeredAtSigfox" id="registeredAtSigfox" name="registeredAtSigfox">
+          {{'QUESTION.SIGFOX.REGISTEREDATSIGFOX' | translate}}</mat-slide-toggle>
+      </div>
+      <div *ngIf="!iotDevice.sigfoxSettings.registeredAtSigfox">
+        <div class="form-group mt-3 col-12">
+          <label class="form-label" for="sigfoxgruppeId">{{'QUESTION.SIGFOX.SIGFOXGRUPPEID' | translate}}*</label>
+            <select id="sigfoxgruppeId" class="form-select" name="sigfoxgruppeId"
+              [(ngModel)]="iotDevice.sigfoxSettings.sigfoxgruppeId" required
+              [value]="iotDevice.sigfoxSettings.sigfoxgruppeId"
+              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('sigfoxgruppeId'), 'is-valid' : formFailedSubmit && !errorFields.includes('sigfoxgruppeId')}">
+              <option *ngFor="let serviceProfile of serviceProfiles" [value]="serviceProfile.id">
+                {{serviceProfile.name}}
+              </option>
+            </select>
+        </div>
+        <div class="form-group mt-3 col-12">
+          <label class="form-label" for="sigfoxIdentifier">{{'QUESTION.SIGFOX.SIGFOXIDENTIFIER' | translate}}*</label>
+          <input type="text" id="sigfoxIdentifier" name="sigfoxIdentifier" maxLength="16"
+            [placeholder]="'QUESTION.SIGFOX.SIGFOXIDENTIFIER-PLACEHOLDER' | translate" class="form-control"
+            [(ngModel)]="iotDevice.sigfoxSettings.sigfoxIdentifier"
+            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('sigfoxIdentifier'), 'is-valid' : formFailedSubmit && !errorFields.includes('sigfoxIdentifier')}">
+        </div>
+        <div class="form-group mt-3 col-12">
+          <label class="form-label" for="PAC">{{'QUESTION.SIGFOX.PAC' | translate}}*</label>
+          <input type="text" id="PAC" name="PAC" maxLength="16"
+            [placeholder]="'QUESTION.SIGFOX.PAC-PLACEHOLDER' | translate" class="form-control"
+            [(ngModel)]="iotDevice.sigfoxSettings.PAC"
+            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('PAC'), 'is-valid' : formFailedSubmit && !errorFields.includes('PAC')}">
+        </div>
+        <div class="form-group mt-3 col-12">
+          <label class="form-label" for="productLicens">{{'QUESTION.SIGFOX.PRODUCTLICENS' | translate}}*</label>
+          <input type="text" id="productLicens" name="productLicens" maxLength="16"
+            [placeholder]="'QUESTION.SIGFOX.PRODUCTLICENS-PLACEHOLDER' | translate" class="form-control"
+            [(ngModel)]="iotDevice.sigfoxSettings.productLicens"
+            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('productLicens'), 'is-valid' : formFailedSubmit && !errorFields.includes('productLicens')}">
+        </div>
+        <div class="form-group mt-3 col-12">
+          <mat-slide-toggle [(ngModel)]="iotDevice.sigfoxSettings.prototype" id="prototype" name="prototype">
+            {{'QUESTION.SIGFOX.PROTOTYPE' | translate}}</mat-slide-toggle>
+        </div>
+      </div>
+      <div *ngIf="iotDevice.sigfoxSettings.registeredAtSigfox">
+        <div class="form-group mt-3 col-12">
+          <label class="form-label" for="sigfoxEnhedId">{{'QUESTION.SIGFOX.SIGFOXENHEDID' | translate}}*</label>
+            <select id="sigfoxEnhedId" class="form-select" name="sigfoxEnhedId"
+              [(ngModel)]="iotDevice.sigfoxSettings.sigfoxEnhedId" required
+              [value]="iotDevice.sigfoxSettings.sigfoxEnhedId"
+              [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('sigfoxEnhedId'), 'is-valid' : formFailedSubmit && !errorFields.includes('sigfoxEnhedId')}">
+              <option *ngFor="let serviceProfile of serviceProfiles" [value]="serviceProfile.id">
+                {{serviceProfile.name}}
+              </option>
+            </select>
         </div>
       </div>
     </ng-container>
